<resources>
    <string name="app_name">Gona</string>
    <string name="intro_first_line">Fresh, Edible, Tasty</string>
    <string name="intro_second_line">Something Random</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signUp">REGISTER</string>
    <string name="about_us">About</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="other_name">Other Names</string>
    <string name="popular_products">Popular Products</string>
    <string name="browse_category">Browse Category</string>
    <string name="check">Check Details</string>
    <string-array name="fruits">
        <item>"Orange"</item>
        <item>"Pineapple"</item>
        <item>"Banana"</item>
        <item>"Mango"</item>
        <item>"Tomato"</item>
        <item>"Pepper"</item>
    </string-array>
    <string-array name="prices">
        <item>"N130"</item>
        <item>"N150"</item>
        <item>"N200"</item>
        <item>"N30"</item>
        <item>"N270"</item>
        <item>"180"</item>

    </string-array>
    <string-array name="numbers">
        <item>"08130000000"</item>
        <item>"09030000000"</item>
        <item>"08030000000"</item>
        <item>"07039000000"</item>
        <item>"07030060000"</item>
        <item>"07030010000"</item>

    </string-array>
</resources>
